# pico_template

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
src/: main.c
